@@ -21,6 +21,9 @@
 			<option value='NOTES'>notes</option>
 			<option value='ORDER'>order</option>
 			<option value='PHONE'>phone</option>
+			<option value='SCHEDULE'>schedule (org)</option>
+			<option value='ACCOUNT_MANAGER'>account manager (org)</option>
+			<option value='ACCOUNT_TYPE'>account type (org)</option>
 		</select>
 		<input type='search' name='searchfor' placeholder='keyword' size='30'  />
 		<button data-app-event='admin_customer|execCustomerSearch'>Search</button>
